--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -20,7 +20,7 @@ alert = #bd2c40
 
 
 [bar/mystatus]
-monitor = eDP
+monitor = eDP-1-1
 width = 100%
 height = 17
 
@@ -53,7 +53,7 @@ font-2 = FontAwesome:pixelsize=11;1
 
 modules-left = i3
 modules-center = xwindow
-modules-right = date time battery
+modules-right = date time bluetooth battery  
 
 tray-position = right
 tray-padding = 6
@@ -76,21 +76,21 @@ type = internal/xwindow
 label = [ %title:0:30:...% ]
 label-foreground = #f48aa3
 
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = 
+;[module/xkeyboard]
+;type = internal/xkeyboard
+;blacklist-0 = 
 
-format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-prefix-underline = ${colors.secondary}
+;format-prefix = " "
+;format-prefix-foreground = ${colors.foreground-alt}
+;format-prefix-underline = ${colors.secondary}
 
-label-layout = %layout%
-label-layout-underline = ${colors.secondary}
+;label-layout = %layout%
+;label-layout-underline = ${colors.secondary}
 
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-background = ${colors.secondary}
-label-indicator-underline = ${colors.secondary}
+;label-indicator-padding = 2
+;label-indicator-margin = 1
+;label-indicator-background = ${colors.secondary}
+;label-indicator-underline = ${colors.secondary}
 
 [module/filesystem]
 type = internal/fs
@@ -289,7 +289,19 @@ format-underline = #ffffff
 label = %time%
 
 [module/volume]
-type = internal/volume
+type = internal/pulseaudio
+
+; Sink to be used, if it exists (find using `pacmd list-sinks`, name field)
+; If not, uses default sink
+sink = alsa_output.pci-0000_00_1f.3.analog-stereo
+
+; Use PA_VOLUME_UI_MAX (~153%) if true, or PA_VOLUME_NORM (100%) if false
+; Default: true
+use-ui-max = true
+
+; Interval for volume increase/decrease (in percent points)
+; Default: 5
+interval = 5
 
 ;format-volume = <label-volume> <bar-volume>
 format-volume = <label-volume>
@@ -317,31 +329,41 @@ bar-volume-empty = ─
 bar-volume-empty-font = 2
 bar-volume-empty-foreground = ${colors.foreground-alt}
 
+[module/bluetooth]
+type = custom/script
+exec = /home/shpotes/.config/polybar/script/polybar-bluetooth/bluetooth.sh
+interval = 2
+click-left = exec blueberry
+click-right = exec /home/shpotes/.config/polybar/script/polybar-bluetooth/toggle_bluetooth.sh
+format-padding = 1
+format-background = #000000
+format-foreground = #ffffff
+
 [module/battery]
 type = internal/battery
-battery = BAT0
+battery = BAT1
 adapter = ACAD
-full-at = 100
+full-at = 98
 
 format-charging = <animation-charging> <label-charging>
-format-charging-underline = ${colors.background}
-
 format-discharging = <ramp-capacity> <label-discharging>
-format-discharging-underline = ${colors.background}
+label-full = %percentage%
 
-format-full-prefix = " "
-format-full-prefix-foreground = ${colors.foreground}
-format-full-underline = ${colors.background}
+ramp-capacity-0 = 
+ramp-capacity-0-foreground = ${colors.alert}
+ramp-capacity-1 = 
+ramp-capacity-1-foreground = ${colors.warning}
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+ramp-capacity-foreground = ${colors.foreground-alt}
 
-ramp-capacity-0 = ""
-ramp-capacity-1 = ""
-ramp-capacity-2 = ""
-ramp-capacity-foreground = ${colors.foreground}
-
-animation-charging-0 = ""
-animation-charging-1 = ""
-animation-charging-2 = ""
-animation-charging-foreground = ${colors.foreground}
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-foreground = ${colors.foreground-alt}
 animation-charging-framerate = 750
 
 [module/powermenu]
